<resources>
    <string name="app_name">2020-04-10341-KA</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Dashboard</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Confirm Password</string>
    <string name="prompt_password_again">Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Tab item titles-->
    <string name="tab1">Healthcare</string>
    <string name="tab2">Disaster Management</string>
    <string name="tab3">Education and Skilling</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="gen">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>


    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <!-- Big Buck Bunny video provided by the Blender Foundation.
    (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org -->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>


</resources>
