<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    tools:context="com.Karnataka.KA.register">


    <!--  <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColorHint="@color/white"
          >
  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"></LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/sealch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"></LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/black_transparency_30"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/black_transparency_30"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_again"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"

        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/black_transparency_30"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >
   -->
    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" **Password must atleast 6 characters long" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/black_transparency_30"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--   </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColorHint="@color/white"
           >

       -->

    <!--     </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/white"
             >
     -->


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Mobile Number"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/black_transparency_30"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--    </android.support.design.widget.TextInputLayout>

     -->

    <Button
        android:id="@+id/register_sign_up_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/signinbutton"
        android:onClick="signup"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>