<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context="com.Karnataka.KA.login">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="380dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sealch" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="145dp"
            android:layout_height="43dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="KARNATAKA"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="326dp"
            android:layout_height="46dp"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="4dp"
            android:text="Covid19 Risk Assesment Tool"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </android.support.constraint.ConstraintLayout>

    <AutoCompleteTextView
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish_brown"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish_brown" />

    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/signinbutton"
        android:onClick="SignIn"

        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:background="@drawable/registerbutton"
        android:onClick="register"
        android:text="@string/action_register"
        android:textColor="@color/default_circle_indicator_fill_color"
        android:textStyle="bold" />


</LinearLayout>
